# VTP

./: .gitignore  README.md  pyproject.toml  start_backend.sh  walkthrough.md
AGENTS/: anit_match_agent.py  config.py  context_agent.py  embeddings.py  mock_interview_agent.py  orchestrator.py  peer_agent.py  scraper_agent.py  tailor_agent.py  trajectory_agent.py  trend_agent.py
BACKEND/: .gitignore
BACKEND/app/: database.py  main.py  models.py
BACKEND/app/agents/: anit_match_agent.py  context_agent.py  embeddings.py  mock_interview_agent.py  models.py  orchestrator.py  peer_agent.py  resume_agent.py  scraper_agent.py  tailor_agent.py  trajectory_agent.py  trend_agent.py
BACKEND/app/dependencies/: auth.py
BACKEND/app/routes/: admin.py  agents.py  auth.py  dashboard.py  jobs.py  resume.py  user.py
BACKEND/app/utils/: embeddings.py  pdf_generator.py  pdf_parser.py  storage.py
FRONTEND/: package.json  tsconfig.tsbuildinfo
FRONTEND/src/components/: DiffViewer.tsx  FloatingLines.css  MatchHeatmap.tsx  SearchBar.tsx  TrendChart.tsx
FRONTEND/src/lib/: api.ts  supabase.ts
FRONTEND/src/store/: SessionContext.tsx
Frontend/: package-lock.json  package.json
Frontend/src/app/: globals.css  layout.tsx  page.tsx
Frontend/src/components/: DiffViewer.tsx  FloatingLines.tsx  MatchHeatmap.tsx  QualificationGauge.tsx  ResumeUploader.tsx  SearchBar.tsx  ThoughtStream.tsx  TrendChart.tsx
Frontend/src/context/: UserContext.tsx
Frontend/src/lib/: api.ts  supabase.ts
backend/: requirements.txt
backend/app/: config.py  main.py
backend/app/agents/: __init__.py  (+17 more)
(+24 files in other folders)
