[project]
name = "vtp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.2",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.51.0",
    "pydantic[email]>=2.0",
    "pypdf2>=3.0.1",
    "fpdf>=1.7.2",
    "supabase>=2.31.0",
    "groq>=1.5.0",
    "python-multipart>=0.0.32",
    "PyJWT>=2.8.0",
    "instructor>=1.15.4",
    "langgraph>=1.2.9",
]
